[package]
name = "mt-kahypar-sys"
version = "0.1.0"
description = "Rust bindings to Mt-KaHyPar."
edition = "2021"
build = "build.rs"
links = "mtkahypar"
license = "LGPL-3.0-or-later"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "README.md"
homepage = "https://github.com/SoftVarE-Group/mt-kahypar-sys"
repository = "https://github.com/SoftVarE-Group/mt-kahypar-sys.git"

[features]
bundled = ["dep:cmake", "dep:tbb-sys", "dep:hwlocality-sys"]

[dependencies]
tbb-sys = { version = "1.1", optional = true }
hwlocality-sys = { version = "0.2", optional = true }

[build-dependencies]
cmake = { version = "0.1", optional = true }
